--- a/24-RestAPI/package.json
+++ b/24-RestAPI/package.json
@@ -1,4 +1,14 @@
 {
+  "name": "nodejs-rest-api",
+  "version": "1.0.0",
+  "description": "Rest api tutorial practice code",
+  "main": "app.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js"
+  },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.18.2"
