--- a/25-RestPractical/client/package.json
+++ b/25-RestPractical/client/package.json
@@ -9,7 +9,7 @@
     "react-scripts": "2.0.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=3001 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
