--- a/27-GraphQL/server/package.json
+++ b/27-GraphQL/server/package.json
@@ -14,11 +14,12 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-graphql": "^0.12.0",
     "express-validator": "^7.0.1",
+    "graphql": "^16.7.1",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.1",
-    "multer": "^1.4.5-lts.1",
-    "socket.io": "^4.7.1"
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
